Update CustomCodeGenerate and Test operators, logging and save generated data

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ metagpt/ext/sela/results/*
 metagpt/ext/aflow/data
 metagpt/ext/aflow/scripts/optimized
 config/config2.yaml
+examples/generate_sample_data/generated_data/*
